+ Added support for handlebars templating in email templates

--- a/oldBashScripts/config/template.html
+++ b/oldBashScripts/config/template.html
@@ -6,7 +6,7 @@
 <body>
 	<div>
 		<p> New Adobie IP address! </p>
-		<p>The new house IP address is: <font size="8">{ip_address}</font>
+		<p>The new house IP address is: <font size="8">{{ ip_address }}</font>
 	</div>
 </body>
 </html>
